# python-uv-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.fastapi  Dockerfile.streamlit  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
docs/: 01_quick_start.md  02_project_structure.md  03_dependencies.md  04_pre_commit_hooks.md  05_docker.md  06_cicd.md  07_azure_setup.md
src/app/: __init__.py  main.py
src/app/api/: api.py
src/app/configs/: config.py
src/app/core/: logging.py
src/app/utils/: helpers.py
src/python_template/: main.py
src/python_template/configs/: config.py  logging_config.ini
src/python_template/core/: logging.py
src/python_template/utils/: helpers.py
tests/: basic_test.py
